test/parser.d/invalid/typedef-1.souc.bad
import whatever

def Unit = { Unit }
